Commit Final: Entrega do Projeto de Extensão – Sistema de Orçamento

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Configuração do datasource (persistência em arquivo)
+# Configuracao do datasource (persistencia em arquivo)
 spring.datasource.url=jdbc:h2:file:./data/testdb;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -6,7 +6,7 @@ spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Hibernate criará ou atualizará as tabelas com base nas suas entidades
+# Hibernate criar ou atualizar as tabelas com base nas suas entidades
 spring.jpa.hibernate.ddl-auto=update
 
 # Habilitar o console do H2
